worked in QGroundControl